fixed resposive layout issue

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -34,3 +34,9 @@ body {
 	color: #333;
 	text-shadow: none;
 }
+
+@media only screen and (max-width: 768px) {
+	.lead {
+		font-size: 14px;
+	}
+}
